# mcp-klartext

./: .env  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  compose.yaml  komodo.toml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: dependabot-automerge.yml  release.yml  shared-contract-check.yml
mcp_klartext/: __init__.py  __main__.py  auth.py  brands.py  config.py  models.py  platforms.py  references.py  scanner.py  server.py  voice.py
mcp_klartext/_shared/: ai_attribution.schema.json  compute_cost.py  provider_costs.v1.yaml
mcp_klartext/data/: brand-detection.md  skill.md
mcp_klartext/data/brands/: casey-berlin.md  casey.md  cdit-works.md  nah.md  storykeep.md  yorizon.md
tests/: test_auth.py  test_brands.py  test_platforms.py  test_references.py  test_registers.py  test_scanner.py  test_scanner_attribution.py  test_server.py  test_uplift.py  test_voice.py
