[project]
name = "mcp-klartext"
version = "0.2.2"
description = "MCP server for brand-aware copywriting — voice DNA, brand contexts, platform templates"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Casey Romkes" }]
dependencies = [
    "fastmcp>=3.2.2",
    "httpx>=0.28.0",
    "pydantic>=2.10",
    "pydantic-settings>=2.12.0",
]

[project.scripts]
mcp-klartext = "mcp_klartext.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcp_klartext"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]
