[project]
name = "mcp-klartext"
version = "0.2.8"
description = "MCP server for brand-aware copywriting — voice DNA, brand contexts, platform templates"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Casey Romkes" }]
dependencies = [
    "fastmcp>=3.2.4",
    "httpx>=0.28.1",
    "pydantic>=2.12",
    "pydantic-settings>=2.13",
    "pyyaml>=6.0",
]

[project.scripts]
mcp-klartext = "mcp_klartext.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcp_klartext"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=1.0",
    "ruff>=0.14",
]
